--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-25  Aleksey Sanin  <aleksey@aleksey.com>
+	* src/nss/pkikeys.c: fixing xmlsec-nss crash
+	* configure.in: change crypto libs order to be openssl/nss/gnutls
+
 2005-07-12  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* configure.in docs/download.html docs/index.html docs/news.html:
