--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-12-15  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* include/xmlsec/templates.h src/templates.c: functions
+	for adding X509IssuerName and X509SerialNumber nodes
+	to the template (patch from Dmitry Belyavsky)
+
 2005-11-14  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* configure.in: fixing shrext vs. shrext_cmds conflict
