--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2006-02-10  Aleksey Sanin  <aleksey@aleksey.com>
+	* authors docs/authors.html
+	include/xmlsec/app.h include/xmlsec/private.h 
+	include/xmlsec/strings.h include/xmlsec/mscrypto/crypto.h
+	include/xmlsec/mscrypto/symbols.h src/app.c src/dl.c
+	src/strings.c src/transforms.c src/mscrypto/certkeys.c
+	src/mscrypto/crypto.c src/mscrypto/digests.c
+	src/mscrypto/signatures.c src/skeleton/crypto.c:
+	added support for GOST 2001 keys/signatures: mscrypto
+	only (patch from Dmitry Belyavsky)
+
 2005-12-20  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* src/mscrypto/x509vfy.c: check MSCrypto store for certs
