--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-03-10  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* src/nss/app.c, src/openssl/x509vfy.c, src/xmldsig.c,
+	src/xmlsec-ltdl.c, src/xmlsec-ltdl.patch: cleanup Coverity
+	complaints
+
 2006-02-26  Aleksey Sanin  <aleksey@aleksey.com>
 	* apps/xmlsec.c tests/testDSig.sh: added an ability to skip
 	tests for transforms not available in given built
