--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2006-05-20  Aleksey Sanin  <aleksey@aleksey.com>
+	Added xmlSecOpenSSLX509StoreAdoptCrl() function
+
 2006-03-10  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* src/nss/app.c, src/openssl/x509vfy.c, src/xmldsig.c,
