--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-08  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* config.h.in configure.in xmlsec-nss.pc.in: support different
+	packages for NSPR/NSS 
+
 2006-05-20  Aleksey Sanin  <aleksey@aleksey.com>
 	Added xmlSecOpenSSLX509StoreAdoptCrl() function
 
