--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-12  Aleksey Sanin  <aleksey@aleksey.com>
+
+	* Makefile.am xmlsec1.m4: automake macro for xmlsec1 (from Heiko Ronsdorf)
+
 2006-09-04  Aleksey Sanin  <aleksey@aleksey.com>
 	* include/xmlsec/openssl/app.h src/openssl/app.c src/openssl/x509vfy.c:
 	added xmlSecOpenSSLAppKeysMngrAddCertsFile() function 
