--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-06  Aleksey Sanin  <aleksey@aleksey.com>
+	* src/mscrypto/*: better support for non micorsoft CSP's (patch from 
+	Wouter and Ed Shallow)
+
 2007-02-12  Aleksey Sanin  <aleksey@aleksey.com>
 
 	* Makefile.am xmlsec1.m4: automake macro for xmlsec1 (from Heiko Ronsdorf)
