--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-06-16  Aleksey Sanin  <aleksey@aleksey.com>
+	* configure.in: configure fixes (patch from Roumen Petrov)
+
 2007-06-06  Aleksey Sanin  <aleksey@aleksey.com>
 	* src/mscrypto/*: better support for non micorsoft CSP's (patch from 
 	Wouter and Ed Shallow)
