--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
-2007-06-19  Aleksey Sanin  <aleksey@aleksey.com>
+2007-07-19  Aleksey Sanin  <aleksey@aleksey.com>
+	* bug #454397 - mingw build: added missing files
+
+2007-07-19  Aleksey Sanin  <aleksey@aleksey.com>
         * bug #454397 - mingw build: normal way to pass def file to linker
         (patch from Roumen Petrov)
 
-2007-06-17  Aleksey Sanin  <aleksey@aleksey.com>
+2007-07-17  Aleksey Sanin  <aleksey@aleksey.com>
         * bug #454397 - mingw build (cross-compilation) and several 
         minor cleanups (patch from Roumen Petrov)
 
