--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-23  Aleksey Sanin  <aleksey@aleksey.com>
+	
+	* src/mscrypto/app.c: fix MS certificates ref counting
+
 2007-11-06  Aleksey Sanin  <aleksey@aleksey.com>
 	
 	* configure.in docs/download.html docs/index.html docs/news.html 
