--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-10  Aleksey Sanin  <aleksey@aleksey.com>
+	* src/mscrypto/x509.c src/openssl/x509.c src/nss/x509.c: fix crash
+	in the error reporting (based on patch from Frank Gross)
+
 2008-06-04  Aleksey Sanin  <aleksey@aleksey.com>
 	* src/templates.c src/keyinfo.c src/xmltree.c src/mscrypto/x509.c 
         src/openssl/x509.c src/nss/x509.c include/xmlsec/xmltree.h:
