--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2009-06-15  Aleksey Sanin  <aleksey@aleksey.com>
+	* configure.in docs/download.html docs/index.html docs/news.html 
+	include/xmlsec/version.h: preparation for new 1.2.12 release
+
+2009-06-13  Aleksey Sanin  <aleksey@aleksey.com>
+        * fixing gnutls detection (bug #585629)
+
+2009-06-09  Aleksey Sanin  <aleksey@aleksey.com>
+        * update SVN to GIT references in docs
+
+2009-06-09  Aleksey Sanin  <aleksey@aleksey.com>
+        * adding configurable Base64 line length
+
+2008-09-10  Aleksey Sanin  <aleksey@aleksey.com>
+	* fixing bug #501315 (patch from Antony Dovgal)
+
 2008-08-26  Aleksey Sanin  <aleksey@aleksey.com>
 	* apps/xmlsec.c: fix integer division (patch from Mikhail)
 
