--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2009-07-17  Aleksey Sanin  <aleksey@aleksey.com>
+	* preparation for 1.2.13 release
+
+2009-07-14  Aleksey Sanin  <aleksey@aleksey.com>
+	* increase default min hmac size to 80 bits
+	* added support for --with-libxml-src and --with-libxslt-src 
+	./configure options
+
+2009-06-25  Aleksey Sanin  <aleksey@aleksey.com>
+	* implemented c14n 1.1 transform + tests
+
 2009-06-15  Aleksey Sanin  <aleksey@aleksey.com>
 	* configure.in docs/download.html docs/index.html docs/news.html 
 	include/xmlsec/version.h: preparation for new 1.2.12 release
