--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-07-29 Aleksey Sanin  <aleksey@aleksey.com>
+	* fix a couple minor issues (based on patch from Arfrever 
+	Frehtes Taifersar Arahesis)
+
 2009-07-17  Aleksey Sanin  <aleksey@aleksey.com>
 	* preparation for 1.2.13 release
 
