--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-08-06 Aleksey Sanin  <aleksey@aleksey.com>
+	* fix build for openssl 1.0 (based on patch from Roumen Petrov)
+	* cleanup test invocation scripts 
+	* cleanup configure.in
+
 2009-07-29 Aleksey Sanin  <aleksey@aleksey.com>
 	* fix a couple minor issues (based on patch from Arfrever 
 	Frehtes Taifersar Arahesis)
