--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2009-09-12 Aleksey Sanin  <aleksey@aleksey.com>
+	* Preparation for 1.2.13 release
+
 2009-08-24 Aleksey Sanin  <aleksey@aleksey.com>
 	* Fix XML dump format
 
