add SHA2 support for xmlsec-nss

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,16 +1,26 @@
-2010-04-23  Aleksey Sanin  <aleksey@aleksey.com>
-	Enable RSA/SHA2 support in xmlsec-mscrypto
-	Misc. cleanups in xmlsec-mscrypto
-	Fix PK_CONFIG problem (reported by Roumen)
+2010-04-25  Aleksey Sanin  <aleksey@aleksey.com>
+	* Added support for SHA256/384/512 for digest, HMAC and RSA 
+	(requires nss 3.8 + nspr 4.3 or greater)
+
+2010-04-24  Aleksey Sanin  <aleksey@aleksey.com>
+	* Fix PK_CONFIG problem (reported by Roumen)
+	* Enable --crypto for transform checks
+	* Fix DSA support in xmlsec-nss (https://bugzilla.mozilla.org/show_bug.cgi?id=561598)
 
 2010-04-23  Aleksey Sanin  <aleksey@aleksey.com>
-	Fix search for certificates with UTF-8 subject on Windows in xmlsec-mscrypto
-	Remove spaces at the end of lines
+	* Enable RSA/SHA2 support in xmlsec-mscrypto
+	* Misc. cleanups in xmlsec-mscrypto
+	* Fix PK_CONFIG problem (reported by Roumen)
+	* Fix DSA support in xmlsec-nss (https://bugzilla.mozilla.org/show_bug.cgi?id=561598)
+
+2010-04-23  Aleksey Sanin  <aleksey@aleksey.com>
+	* Fix search for certificates with UTF-8 subject on Windows in xmlsec-mscrypto
+	* Remove spaces at the end of lines
 
 2010-04-22  Aleksey Sanin  <aleksey@aleksey.com>
-	Fix search for certificates with Unicode subject on Windows in xmlsec-mscrypto
-	Copy *.manifest files to installation for Windows builds
-	Convert tabs to spaces
+	* Fix search for certificates with Unicode subject on Windows in xmlsec-mscrypto
+	* Copy *.manifest files to installation for Windows builds
+	* Convert tabs to spaces
 
 2010-04-21  Aleksey Sanin  <aleksey@aleksey.com>
 	* Fix key name conversion to unicode problem in xmlsec-mscrypto
