workaround emailAddress problem with nss (nss bug https://bugzilla.mozilla.org/show_bug.cgi?id=561689)

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 	* Added support for SHA256/384/512 for digest, HMAC and RSA in xmlsec-nss
 	(requires nss 3.8 + nspr 4.3 or greater)
 	* Added support for MD5 for digest and RSA in xmlsec-nss
+	* Minor fixes to xmlsec-nss (xmlsec bug #118630), bumping nss min 
+	version to 3.9 + nspr 4.4.1 or greater
 
 2010-04-24  Aleksey Sanin  <aleksey@aleksey.com>
 	* Fix PK_CONFIG problem (reported by Roumen)
