--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
-General
--------------------------------------------------
+*************************************************
+                   General
+*************************************************
 
 * Unify password callback (one of parameters: filename)
 * Get key usage from certs
@@ -7,10 +8,22 @@ General
   (what cheks were performed, etc.)
 
 
-Tests status
+*************************************************
+                  Tests status
+*************************************************
+
+-------------------------------------------------
+* xmlsec-openssl (April 26, 2010 using OpenSSL 0.9.8g)
 -------------------------------------------------
 
-* xmlsec-nss (April 25, 2010 using NSS 3.12.6)
+** Skipped tests due to missing transforms: GOST
+
+aleksey-xmldsig-01/enveloped-gost
+
+
+-------------------------------------------------
+* xmlsec-nss (April 26, 2010 using NSS 3.12.6)
+-------------------------------------------------
 
 ** Skipped tests due to missing transforms: RIPEMD160, SHA224, RSA/OAEP, GOST
 
@@ -32,8 +45,10 @@ merlin-xmlenc-five/encrypt-data-tripledes-cbc-rsa-oaep-mgf1p
 
 merlin-xmldsig-twenty-three/signature-x509-crt-crl
 
-* xmlsec-mscrypto (April 26, 2010)
 
+-------------------------------------------------
+* xmlsec-mscrypto (April 26, 2010 using Windows XP SP3)
+-------------------------------------------------
 
 ** Skipped tests due to missing transforms: RIPEMD160, SHA224, RSA/OAEP, 
 AES and DES KW
@@ -78,3 +93,111 @@ merlin-xmlenc-five/encrypt-element-aes256-cbc-retrieved-kw-aes256
 
 aleksey-xmldsig-01/enveloped-gost
 
+-------------------------------------------------
+* xmlsec-gnutls (April 26, 2010 using GnuTLS)
+-------------------------------------------------
+
+** Skipped tests due to missing transforms: RSA, DSA, AES, AES/DES KW, 
+RSA PKCS/OAEP, X509
+
+aleksey-xmldsig-01/enveloping-dsa-x509chain
+aleksey-xmldsig-01/enveloping-rsa-x509chain
+aleksey-xmldsig-01/enveloping-md5-hmac-md5
+aleksey-xmldsig-01/enveloping-md5-hmac-md5-64
+aleksey-xmldsig-01/enveloping-ripemd160-hmac-ripemd160
+aleksey-xmldsig-01/enveloping-ripemd160-hmac-ripemd160-64
+aleksey-xmldsig-01/enveloping-sha224-hmac-sha224
+aleksey-xmldsig-01/enveloping-sha224-hmac-sha224-64
+aleksey-xmldsig-01/enveloping-sha256-hmac-sha256
+aleksey-xmldsig-01/enveloping-sha256-hmac-sha256-64
+aleksey-xmldsig-01/enveloping-sha384-hmac-sha384
+aleksey-xmldsig-01/enveloping-sha384-hmac-sha384-64
+aleksey-xmldsig-01/enveloping-sha512-hmac-sha512
+aleksey-xmldsig-01/enveloping-sha512-hmac-sha512-64
+aleksey-xmldsig-01/enveloping-md5-rsa-md5
+aleksey-xmldsig-01/enveloping-ripemd160-rsa-ripemd160
+aleksey-xmldsig-01/enveloping-sha1-rsa-sha1
+aleksey-xmldsig-01/enveloping-sha224-rsa-sha224
+aleksey-xmldsig-01/enveloping-sha256-rsa-sha256
+aleksey-xmldsig-01/enveloping-sha384-rsa-sha384
+aleksey-xmldsig-01/enveloping-sha512-rsa-sha512
+aleksey-xmldsig-01/enveloping-expired-cert
+aleksey-xmldsig-01/x509data-test
+aleksey-xmldsig-01/x509data-sn-test
+merlin-xmldsig-twenty-three/signature-enveloped-dsa
+merlin-xmldsig-twenty-three/signature-enveloping-dsa
+merlin-xmldsig-twenty-three/signature-enveloping-b64-dsa
+merlin-xmldsig-twenty-three/signature-enveloping-rsa
+merlin-xmldsig-twenty-three/signature-external-b64-dsa
+merlin-xmldsig-twenty-three/signature-external-dsa
+merlin-xmldsig-twenty-three/signature-keyname
+merlin-xmldsig-twenty-three/signature-x509-crt
+merlin-xmldsig-twenty-three/signature-x509-sn
+merlin-xmldsig-twenty-three/signature-x509-is
+merlin-xmldsig-twenty-three/signature-x509-ski
+merlin-xmldsig-twenty-three/signature-retrievalmethod-rawx509crt
+merlin-xmldsig-twenty-three/signature
+merlin-xmlenc-five/encsig-ripemd160-hmac-ripemd160-kw-tripledes
+merlin-xmlenc-five/encsig-sha256-hmac-sha256-kw-aes128
+merlin-xmlenc-five/encsig-sha384-hmac-sha384-kw-aes192
+merlin-xmlenc-five/encsig-sha512-hmac-sha512-kw-aes256
+merlin-exc-c14n-one/exc-signature
+merlin-exc-c14n-one/exc-signature
+merlin-c14n-three/signature
+merlin-xpath-filter2-three/sign-xfdl
+merlin-xpath-filter2-three/sign-spec
+phaos-xmldsig-three/signature-big
+phaos-xmldsig-three/signature-dsa-detached
+phaos-xmldsig-three/signature-dsa-enveloped
+phaos-xmldsig-three/signature-dsa-enveloping
+phaos-xmldsig-three/signature-dsa-manifest
+phaos-xmldsig-three/signature-hmac-md5-c14n-enveloping
+phaos-xmldsig-three/signature-rsa-detached-b64-transform
+phaos-xmldsig-three/signature-rsa-detached
+phaos-xmldsig-three/signature-rsa-detached-xpath-transform
+phaos-xmldsig-three/signature-rsa-detached-xslt-transform-retrieval-method
+phaos-xmldsig-three/signature-rsa-detached-xslt-transform
+phaos-xmldsig-three/signature-rsa-enveloped
+phaos-xmldsig-three/signature-rsa-enveloping
+phaos-xmldsig-three/signature-rsa-manifest-x509-data-cert-chain
+phaos-xmldsig-three/signature-rsa-manifest-x509-data-cert
+phaos-xmldsig-three/signature-rsa-manifest-x509-data-issuer-serial
+phaos-xmldsig-three/signature-rsa-manifest-x509-data-ski
+phaos-xmldsig-three/signature-rsa-manifest-x509-data-subject-name
+phaos-xmldsig-three/signature-rsa-manifest
+phaos-xmldsig-three/signature-rsa-xpath-transform-enveloped
+aleksey-xmldsig-01/enveloped-gost
+merlin-xmldsig-twenty-three/signature-x509-crt-crl
+aleksey-xmldsig-01/enveloping-expired-cert
+phaos-xmldsig-three/signature-rsa-detached-xslt-transform-bad-retrieval-method
+phaos-xmldsig-three/signature-rsa-enveloped-bad-digest-val
+phaos-xmldsig-three/signature-rsa-enveloped-bad-sig
+phaos-xmldsig-three/signature-rsa-manifest-x509-data-crl
+
+
+aleksey-xmlenc-01/enc-des3cbc-aes192-keyname
+merlin-xmlenc-five/encrypt-element-aes128-cbc-rsa-1_5
+merlin-xmlenc-five/encrypt-data-tripledes-cbc-rsa-oaep-mgf1p
+merlin-xmlenc-five/encrypt-data-aes256-cbc-kw-tripledes
+merlin-xmlenc-five/encrypt-content-aes128-cbc-kw-aes192
+merlin-xmlenc-five/encrypt-data-aes192-cbc-kw-aes256
+merlin-xmlenc-five/encrypt-element-tripledes-cbc-kw-aes128
+merlin-xmlenc-five/encrypt-element-aes256-cbc-retrieved-kw-aes256
+01-phaos-xmlenc-3/enc-element-3des-kt-rsa1_5
+01-phaos-xmlenc-3/enc-element-3des-kt-rsa_oaep_sha1
+01-phaos-xmlenc-3/enc-element-aes128-kt-rsa1_5
+01-phaos-xmlenc-3/enc-element-aes128-kt-rsa_oaep_sha1
+01-phaos-xmlenc-3/enc-element-aes192-kt-rsa_oaep_sha1
+01-phaos-xmlenc-3/enc-text-aes192-kt-rsa1_5
+01-phaos-xmlenc-3/enc-content-aes256-kt-rsa1_5
+01-phaos-xmlenc-3/enc-text-aes256-kt-rsa_oaep_sha1
+01-phaos-xmlenc-3/enc-element-3des-kw-3des
+01-phaos-xmlenc-3/enc-content-aes128-kw-3des
+01-phaos-xmlenc-3/enc-element-aes128-kw-aes128
+01-phaos-xmlenc-3/enc-element-aes128-kw-aes256
+01-phaos-xmlenc-3/enc-content-3des-kw-aes192
+01-phaos-xmlenc-3/enc-content-aes192-kw-aes256
+01-phaos-xmlenc-3/enc-element-aes192-kw-aes192
+01-phaos-xmlenc-3/enc-element-aes256-kw-aes256
+01-phaos-xmlenc-3/enc-text-3des-kw-aes256
+01-phaos-xmlenc-3/enc-text-aes128-kw-aes192
