--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-05-09  Aleksey Sanin  <aleksey@aleksey.com>
+	* Added DES KW support for xmlsec-mscrypto
+
 2010-05-08  Aleksey Sanin  <aleksey@aleksey.com>
 	* Added AES KW support for xmlsec-mscrypto
 	* Added AES KW support for xmlsec-gnutls
