--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2010-05-09  Aleksey Sanin  <aleksey@aleksey.com>
 	* Added DES KW support for xmlsec-mscrypto
+	* Added DES KW support for xmlsec-gnutls
 
 2010-05-08  Aleksey Sanin  <aleksey@aleksey.com>
 	* Added AES KW support for xmlsec-mscrypto
