--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-05-10  Aleksey Sanin  <aleksey@aleksey.com>
+	* Added RSA/SHA1/SHA256/SHA384/SHA512/MD5/RIPEMD160 for xmlsec-gcrypt
+
 2010-05-09  Aleksey Sanin  <aleksey@aleksey.com>
 	* Added DES KW support for xmlsec-mscrypto
 	* Added DES KW support for xmlsec-gnutls
