--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-04-24  Aleksey Sanin  <aleksey@aleksey.com>
+	* Preparation for 1.2.16 release
+
 2010-05-23  Aleksey Sanin  <aleksey@aleksey.com>
 	* Added X509Data support to xmlsec-gnutls
 
