--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-04-25  Aleksey Sanin  <aleksey@aleksey.com>
+	* 1.2.15 release
+
 2010-04-24  Aleksey Sanin  <aleksey@aleksey.com>
 	* Preparation for 1.2.16 release
 
