--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,26 @@
+2011-03-30  Aleksey Sanin  <aleksey@aleksey.com>
+        * Preparations for 1.2.17 release
+
+2011-03-29  Aleksey Sanin  <aleksey@aleksey.com>
+        * Fixed security issue with libxslt (CVE-2011-1425, reported by Nicolas Gregoire)
+
+2011-02-05  Aleksey Sanin  <aleksey@aleksey.com>
+        * Fixed pkcs12 file loading (based on patch from Andre de Souza Pinto)
+
+2010-11-23  Aleksey Sanin  <aleksey@aleksey.com>
+        * Fixed comments (based on patch from Wolfgang Woehl)
+
+2010-11-09  Aleksey Sanin  <aleksey@aleksey.com>
+        * Fixed extra quotes in configure (bug #631258)
+
+2010-07-19  Aleksey Sanin  <aleksey@aleksey.com>
+        * Fixed configure issue with empty --with-libxml/libxsl and config scripts in /bin directory
+
 2010-06-27  Aleksey Sanin  <aleksey@aleksey.com>
 	* Fixed gcrypt init/shutdown (patch from Roumen)
 
 2010-04-25  Aleksey Sanin  <aleksey@aleksey.com>
-	* 1.2.15 release
+	* 1.2.16 release
 
 2010-04-24  Aleksey Sanin  <aleksey@aleksey.com>
 	* Preparation for 1.2.16 release
