--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2011-03-31  Aleksey Sanin  <aleksey@aleksey.com>
+        * 1.2.17 release
+
 2011-03-30  Aleksey Sanin  <aleksey@aleksey.com>
         * Preparations for 1.2.17 release
 
