--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-03-24 Aleksey Sanin  <aleksey@aleksey.com>
+	* 1.2.19 release
+
+2013-01-18 Aleksey Sanin  <aleksey@aleksey.com>
+	* Added support for DSA-SHA256, ECDSA-SHA1, ECDSA-SHA224, ECDSA-SHA256, ECDSA-SHA384, ECDSA-SHA512 (Mak Kolybabi)
+
 2011-09-06  Aleksey Sanin  <aleksey@aleksey.com>
         * GOST support for xmlsec-openssl (patch from Dmitry Belyavsky)
 
